Fix: Categories are not centered in the article page. to #4

--- a/static/css/article.css
+++ b/static/css/article.css
@@ -1,8 +1,8 @@
 :root {
-    --color-secondary: #cccccc;
-    --color-background: white;
-    --font-size-small: 0.85em;
-    --line-height-small: 1.25em;
+  --color-secondary: #cccccc;
+  --color-background: white;
+  --font-size-small: 0.85em;
+  --line-height-small: 1.25em;
 }
 
 /* Typography */
@@ -11,75 +11,80 @@ h2,
 h3,
 h4,
 th {
-    font-family: var(--font-family-title);
-    /* text-transform: uppercase; */
+  font-family: var(--font-family-title);
+  /* text-transform: uppercase; */
 }
 h1.title {
-    text-align: center;
-    font-size: 2.3em;
-    margin-bottom: 0;
-    font-weight: 400;
+  text-align: center;
+  font-size: 2.3em;
+  margin-bottom: 0;
+  font-weight: 400;
 }
 
 .org-bold {
-    font-weight: 400;
+  font-weight: 400;
 }
 i,
 i a {
-    color: #999999;
-    font-style: normal;
+  color: #999999;
+  font-style: normal;
 }
 .org-face-salient {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 blockquote {
-    color: #999999;
-    padding-top: 0;
-    margin-left: 1em;
-    padding-left: 1em;
-    border-left: 3px solid #cccccc;
+  color: #999999;
+  padding-top: 0;
+  margin-left: 1em;
+  padding-left: 1em;
+  border-left: 3px solid #cccccc;
 }
 
 ul.org-ul {
-    padding-left: 0;
+  padding-left: 0;
 }
 ul.org-ul li {
-    margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 ul.org-ul li p {
-    display: inline-block;
-    margin-top: 0em;
-    margin-bottom: 0em;
+  display: inline-block;
+  margin-top: 0em;
+  margin-bottom: 0em;
 }
 
 ol.org-ol {
-    padding-left: 0;
-    margin-left: 2em;
-    counter-reset: li;
+  padding-left: 0;
+  margin-left: 2em;
+  counter-reset: li;
 }
 .org-ol li {
-    counter-increment: li;
-    margin-bottom: 0.25em;
+  counter-increment: li;
+  margin-bottom: 0.25em;
 }
 
 .post-line {
-    width: 100%;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-    /* border-width: 1.5px; */
-    border-top: 1px dashed #ccc; /* 设置顶部边框为虚线 */
+  width: 100%;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  /* border-width: 1.5px; */
+  border-top: 1px dashed #ccc; /* 设置顶部边框为虚线 */
 }
 
 body {
-    counter-reset: section;
+  counter-reset: section;
 }
 h2 {
-    counter-reset: subsection;
+  counter-reset: subsection;
 }
 
 article img {
-    border-radius: 15px;
-    width: 90%;
+  border-radius: 15px;
+  width: 90%;
+}
+
+center {
+  display: flex;
+  justify-content: center;
 }
